--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,1 +1,111 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Breathe</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.6;
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 0 20px;
+            color: #333;
+            background-color: #ffffff;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        ul {
+            margin-left: 20px;
+        }
+        a {
+            color: #1a73e8;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            margin-top: 40px;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+
+<h1>Privacy Policy for Breathe</h1>
+<p><strong>Last Updated:</strong> 2026-01-30</p>
+
+<p>
+This Privacy Policy describes how Breathe ("we", "us", or "our")
+handles your information when you use our mobile application (the "App").
+</p>
+
+<h2>1. Information Collection and Use</h2>
+<p>
+<strong>We do not collect, store, or share any personal information from our users.</strong>
+</p>
+<p>
+The App functions entirely locally on your device. We do not require you to
+create an account, log in, or provide any personal details (such as your name,
+email address, or phone number) to use the App.
+</p>
+
+<h2>2. Third-Party Services</h2>
+<p>
+The App uses the following third-party services which may collect information
+used to identify your device for functional purposes:
+</p>
+<ul>
+    <li>
+        <strong>Google Fonts</strong>: The App uses Google Fonts to display text.
+        Google may collect your IP address to serve these fonts.
+        You can read Google's Privacy Policy here:
+        <a href="https://policies.google.com/privacy" target="_blank">
+            https://policies.google.com/privacy
+        </a>
+    </li>
+</ul>
+
+<h2>3. Permissions</h2>
+<p>The App may request the following permissions on your device:</p>
+<ul>
+    <li>
+        <strong>Internet Access</strong>: Required to download font assets via
+        Google Fonts.
+    </li>
+</ul>
+
+<h2>4. Children’s Privacy</h2>
+<p>
+Since we do not collect any personal information, our App is safe for users of
+all ages, including children under the age of 13. We do not knowingly collect
+personally identifiable information from children.
+</p>
+
+<h2>5. Changes to This Privacy Policy</h2>
+<p>
+We may update our Privacy Policy from time to time. Thus, you are advised to
+review this page periodically for any changes. We will notify you of any changes
+by posting the new Privacy Policy on this page.
+</p>
+
+<h2>6. Contact Us</h2>
+<p>
+If you have any questions or suggestions about our Privacy Policy, do not
+hesitate to contact us at:
+</p>
+<p>
+<strong>atharva80000@gmail.com</strong>
+</p>
+
+<footer>
+    <p>© 2026 Breathe. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
