--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-<h1>Privacy Policy for Breathe</h1>
+<h1>Privacy Policy for QuietSpace</h1>
 <p><strong>Last Updated:</strong> 2026-01-30</p>
 
 <p>
@@ -104,7 +104,7 @@ hesitate to contact us at:
 </p>
 
 <footer>
-    <p>© 2026 Breathe. All rights reserved.</p>
+    <p>© 2026 QuietSpace All rights reserved.</p>
 </footer>
 
 </body>
