--- a/index.html
+++ b/index.html
@@ -133,6 +133,36 @@
             margin-bottom: 20px;
         }
 
+        /* Screenshots */
+        .screenshots {
+            padding: 80px 0;
+            text-align: center;
+        }
+
+        .screenshots-grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
+        }
+
+        .screenshot-item {
+            flex: 0 1 300px;
+        }
+
+        .screenshot-item img {
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            border: 2px solid #333;
+            transition: transform 0.3s ease;
+        }
+
+        .screenshot-item img:hover {
+            transform: scale(1.05);
+        }
+
         /* Privacy Policy */
         .privacy {
             padding: 80px 0;
@@ -206,6 +236,23 @@
                     <i class="fas fa-shield-alt feature-icon"></i>
                     <h3>Privacy First</h3>
                     <p>No account required. No data collection. Your peace of mind is our priority.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="screenshots">
+        <div class="container">
+            <h2 style="font-size: 2.5rem; margin-bottom: 20px;">App Screenshots</h2>
+            <div class="screenshots-grid">
+                <div class="screenshot-item">
+                    <img src="images/Screenshot_20260131_091108.png" alt="QuietSpace Screenshot 1">
+                </div>
+                <div class="screenshot-item">
+                    <img src="images/Screenshot_20260131_091127.png" alt="QuietSpace Screenshot 2">
+                </div>
+                <div class="screenshot-item">
+                    <img src="images/Screenshot_20260131_091143.png" alt="QuietSpace Screenshot 3">
                 </div>
             </div>
         </div>
