fix broken hero image link

--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
                 <a href="#" class="download-btn"><i class="fab fa-google-play"></i> Coming Soon to Play Store</a>
             </div>
             <div class="hero-image">
-                <img src="assets/screenshot_home.png" alt="App Screenshot">
-            </div>
+                <img src="images/Screenshot_20260131_091108.png" alt="App Screenshot">            </div>
         </section>
     </div>
 
