--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -41,7 +41,7 @@
 <p><strong>Last Updated:</strong> 2026-01-30</p>
 
 <p>
-This Privacy Policy describes how Breathe ("we", "us", or "our")
+This Privacy Policy describess how Breathe ("we", "us", or "our")
 handles your information when you use our mobile application (the "App").
 </p>
 
